@@ -1,3 +1,7 @@
+20070227
+	/include/fcall.h: ensure unsigned promotion to counter ansi sign-extending rules for GBIT64
+20070220
+	add 0x92 as chip ID for ether91c111.c
 20070217
 	repair /appl/lib/libc.b and /appl/lib/libc0.b strncmp implementations (used only by c2l output) [inferno-os issue 9]
 	/emu/port/devip.c, get socket fd on reopen of ctl
